src/objects/echosign_dev1__SIGN_Data_Mapping__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchosignHelp</customHelpPage>
    <fields>
        <fullName>echosign_dev1__Cached_Input_Type__c</fullName>
        <label>Cached Input Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Default_Data_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want this data mapping to run by default for all agreements sent. You can override the default if you specify a different data mapping to use with a specific agreement or agreement template.</description>
        <inlineHelpText>Check this box if you want this data mapping to run by default for all agreements sent. You can override the default if you specify a different data mapping to use with a specific agreement or agreement template.</inlineHelpText>
        <label>Default Data Mapping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Merge_Field_CSV__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Merge Field CSV</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Notify_User_of_Errors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notify User of Errors</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Data Mapping</label>
    <listViews>
        <fullName>echosign_dev1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>